--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @theme {
-  --color-header: #0057e7;
+  --color-graybg: #c7c7c7;
+  --color-darkergraybg: #a9a9a9;
+  --color-heading: #094067;
+  --color-paragraph: #5f6c7b;
+  --color-button: #3da9fc;
+  --font-poppins: "Poppins";
 }
